--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <div id="content" class="content">
     
-    <h3>Recent Posts</h3>
+    <h3>Các bài viết gần đây</h3>
     <ul class="category recent-posts">       
         {% for post in site.posts limit:5  %}
         {% unless post.draft %}
